<?xml version="1.0"?>
<package format="3">
  <name>zivid_nodes</name>
  <version>0.0.0</version>
  <description>Contains C++ zivid important nodes</description>
  <maintainer email="sohaibshehabsnouber@gmail.com">Sohaib</maintainer>
  <license>Apache2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_srvs</depend>
  <depend>zivid_camera</depend>
  <depend>Eigen3</depend>
  <depend>Zivid</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>custom_messages</depend>
  <depend>full_drive</depend>
  <depend>action_interfaces</depend>
  <depend>service_interfaces</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>zivid_interfaces</depend>
  <depend>pcl_conversions</depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
